# title-generation

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: barthez-full.ipynb  barthez-orange.ipynb  barthez.ipynb  berthezorange.py  berthezorangehibou.py  embedding.ipynb  encoder.ipynb  ex.ipynb  extractive.ipynb  finetune.ipynb  flan.ipynb  gpt_decoder.ipynb  mt00.ipynb  mt00.py  mt000.py  mt0000.py  mt00t.ipynb  mt0q.ipynb  mt0q.py  mt5.ipynb  mt5.py  quant.ipynb  stupid.ipynb  submission-mt0-large-r128-e10-c0.3-finetune.csv  submission-mt0-large-r64-e5-c1-finetune.csv  submission-mt0-large.csv  submission-mt0-xl-r128-e10-c1-quantune.csv  submission-mt0-xl-r16-e1-c0.1-quantune.csv  submission-mt0-xl-r16-e3-c0.1-quantune.csv  submission-mt0-xl-r64-e5-c0.5-quantune.csv
scripts/: summarization_baselines.py
src/titlegen/: ex.py  score.py
