[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "titlegen"
version = "0.0.1"
authors = [
  { name="Guile Vieira", email="guilhermevmanhaes@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'pandas',
    'nltk',
    'matplotlib',
    'torch',
]
